打包jsw服务