@@ -217,8 +217,147 @@
 
     </dependencies>
 
-
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <configuration>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <repositoryName>lib</repositoryName>
+                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                    <copyConfigurationDirectory>src/main/resources</copyConfigurationDirectory>
+                    <target>${project.build.directory}</target>
+                    <daemons>
+                        <daemon>
+                            <id>J360-Dubbo</id>
+                            <mainClass>me.j360.dubbo.bootstrap.ApplicationMain</mainClass>
+                            <commandLineArguments>
+                                <commandLineArgument></commandLineArgument>
+                            </commandLineArguments>
+                            <platforms>
+                                <platform>jsw</platform>
+                            </platforms>
+                            <generatorConfigurations>
+                                <generatorConfiguration>
+                                    <generator>jsw</generator>
+                                    <includes>
+                                        <include>linux-x86-32</include>
+                                        <include>linux-x86-64</include>
+                                        <include>windows-x86-32</include>
+                                        <include>windows-x86-64</include>
+                                        <include>macosx-universal-64</include>
+                                    </includes>
+                                    <configuration>
+                                        <property>
+                                            <name>configuration.directory.in.classpath.first</name>
+                                            <value>etc</value>
+                                        </property>
+                                        <property>
+                                            <name>set.default.REPO_DIR</name>
+                                            <value>lib</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile</name>
+                                            <value>./logs/wrapper-YYYYMMDD.log</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile.loglevel</name>
+                                            <value>INFO</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile.rollmode</name>
+                                            <value>DATE</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile.maxfiles</name>
+                                            <value>7</value>
+                                        </property>
+                                        <property>
+                                            <name>run.as.user.envvar</name>
+                                            <value>root</value>
+                                        </property>
+                                    </configuration>
+                                </generatorConfiguration>
+                            </generatorConfigurations>
+                            <jvmSettings>
+                                <initialMemorySize>1024</initialMemorySize>
+                                <maxMemorySize>1024</maxMemorySize>
+                                <extraArguments>
+                                    <!--core-->
+                                    <extraArgument>-server</extraArgument>
+                                    <extraArgument>-XX:NewRatio=3</extraArgument>
+                                    <extraArgument>-XX:SurvivorRatio=4</extraArgument>
+                                    <extraArgument>-XX:TargetSurvivorRatio=90</extraArgument>
+                                    <extraArgument>-XX:MaxTenuringThreshold=6</extraArgument>
+                                    <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+                                    <extraArgument>-XX:+UseParNewGC</extraArgument>
+                                    <extraArgument>-XX:ConcGCThreads=4</extraArgument>
+                                    <extraArgument>-XX:ParallelGCThreads=4</extraArgument>
+                                    <extraArgument>-XX:MetaspaceSize=256M</extraArgument>
+                                    <extraArgument>-XX:MaxMetaspaceSize=256M</extraArgument>
+                                    <extraArgument>-XX:ReservedCodeCacheSize=240M</extraArgument>
 
+                                    <extraArgument>-XX:+ExplicitGCInvokesConcurrent</extraArgument>
+                                    <extraArgument>-XX:PretenureSizeThreshold=64m</extraArgument>
+                                    <extraArgument>-XX:+UseCMSInitiatingOccupancyOnly</extraArgument>
+                                    <extraArgument>-XX:CMSInitiatingOccupancyFraction=75</extraArgument>
+                                    <extraArgument>-XX:CMSMaxAbortablePrecleanTime=6000</extraArgument>
+                                    <extraArgument>-XX:+CMSParallelRemarkEnabled</extraArgument>
+                                    <extraArgument>-XX:+ParallelRefProcEnabled</extraArgument>
+                                    <extraArgument>-XX:+UseCMSCompactAtFullCollection</extraArgument>
+                                    <extraArgument>-XX:CMSFullGCsBeforeCompaction=10</extraArgument>
+
+                                    <!--log-->
+                                    <extraArgument>-verbose:gc</extraArgument>
+                                    <extraArgument>-Xloggc:gc.log</extraArgument>
+                                    <extraArgument>-XX:+PrintGC</extraArgument>
+                                    <extraArgument>-XX:+PrintGCDetails</extraArgument>
+                                    <extraArgument>-XX:+PrintGCDateStamps</extraArgument>
+                                    <extraArgument>-XX:+PrintHeapAtGC</extraArgument>
+                                    <extraArgument>-XX:+PrintGCTimeStamps</extraArgument>
+                                    <extraArgument>-XX:+PrintTenuringDistribution</extraArgument>
+                                    <extraArgument>-XX:+PrintGCApplicationStoppedTime</extraArgument>
+                                    <extraArgument>-XX:+UseGCLogFileRotation</extraArgument>
+                                    <extraArgument>-XX:NumberOfGCLogFiles=10</extraArgument>
+                                    <extraArgument>-XX:GCLogFileSize=100M</extraArgument>
+                                    <extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
+                                    <extraArgument>-XX:HeapDumpPath=.</extraArgument>
+
+                                    <!--options-->
+                                    <extraArgument>-XX:-OmitStackTraceInFastThrow</extraArgument>
+                                    <extraArgument>-XX:-UseBiasedLocking</extraArgument>
+                                    <extraArgument>-XX:AutoBoxCacheMax=20000</extraArgument>
+                                    <extraArgument>-DLog4jContextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector</extraArgument>
+                                </extraArguments>
+                                <systemProperties>
+                                    <systemProperty>com.sun.management.jmxremote</systemProperty>
+                                    <systemProperty>com.sun.management.jmxremote.port=9901</systemProperty>
+                                    <systemProperty>com.sun.management.jmxremote.authenticate=false</systemProperty>
+                                    <systemProperty>com.sun.management.jmxremote.ssl=false</systemProperty>
+                                    <systemProperty>java.rmi.server.hostname=127.0.0.1</systemProperty>
+                                </systemProperties>
+                            </jvmSettings>
+                        </daemon>
+                    </daemons>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-jsw-scripts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
